#9224 closed defect (fixed)
--disable-error-resilience flag is broken
| Reported by: | paulcarroty | Owned by: | |
|---|---|---|---|
| Priority: | normal | Component: | build system |
| Version: | git-master | Keywords: | |
| Cc: | paulcarroty | Blocked By: | |
| Blocking: | Reproduced by developer: | no | |
| Analyzed by developer: | no |
Description
Summary of the bug: can't compile ffmpeg with this flag
ffmpeg version - 4.4 & master
Tested on Clear Linux & Fedora
How to reproduce:
./configure --enable-shared --disable-static --disable-error-resilience && make -j16 ... LD ffmpeg_g LD ffplay_g /usr/bin/ld: libavcodec/libavcodec.so: undefined reference to `ff_print_debug_info' /usr/bin/ld: libavcodec/libavcodec.so: undefined reference to `ff_rl_init' /usr/bin/ld: libavcodec/libavcodec.so: undefined reference to `ff_er_frame_end' /usr/bin/ld: libavcodec/libavcodec.so: undefined reference to `ff_mpv_frame_end' /usr/bin/ld: libavcodec/libavcodec.so: undefined reference to `ff_mpeg_draw_horiz_band' /usr/bin/ld: libavcodec/libavcodec.so: undefined reference to `ff_mpv_frame_start' /usr/bin/ld: libavcodec/libavcodec.so: undefined reference to `ff_mpv_idct_init' /usr/bin/ld: libavcodec/libavcodec.so: undefined reference to `ff_update_duplicate_context' /usr/bin/ld: libavcodec/libavcodec.so: undefined reference to `ff_mpv_report_decode_progress' [/usr/bin/ld: libavcodec/libavcodec.so: undefined reference to `ff_mpeg_update_thread_context' [12/1964] /usr/bin/ld: libavcodec/libavcodec.so: undefined reference to `ff_mpv_decode_init' /usr/bin/ld: libavcodec/libavcodec.so: undefined reference to `ff_mpv_export_qp_table' /usr/bin/ld: libavcodec/libavcodec.so: undefined reference to `ff_mpv_common_end' /usr/bin/ld: libavcodec/libavcodec.so: undefined reference to `ff_mpv_reconstruct_mb' /usr/bin/ld: libavcodec/libavcodec.so: undefined reference to `ff_mpv_common_init' /usr/bin/ld: libavcodec/libavcodec.so: undefined reference to `ff_mpeg_flush' /usr/bin/ld: libavcodec/libavcodec.so: undefined reference to `ff_init_block_index' /usr/bin/ld: libavcodec/libavcodec.so: undefined reference to `ff_er_add_slice' /usr/bin/ld: libavcodec/libavcodec.so: undefined reference to `ff_mpeg_er_frame_start' collect2: error: ld returned 1 exit status make: *** [Makefile:123: ffmpeg_g] Error 1
Change History (3)
comment:1 by , 5 years ago
comment:2 by , 5 years ago
| Resolution: | → fixed |
|---|---|
| Status: | new → closed |
Fixed in commits 8f588eea8e813304f14e1889cfdc79ab89a88deb and e2301feabc2be18e1ee878dcdf643fd78b90c735.
comment:3 by , 5 years ago
| Component: | ffmpeg → build system |
|---|---|
| Keywords: | resilience removed |
Note:
See TracTickets
for help on using tickets.



Seems like the IPU decoder is missing a dependency on mpegvideo.